@@ -20,6 +20,7 @@ Version 0.1.5.x:
 11: importVCF: Phased input accepted for "/" coding (it is transformed in non-phased notation)
 12: importVCF: Info fields are now printed as well
 13: importVCF: Simplify parameter added
+14: summary.fz: This is now a data.frame
 
 Version 0.1.4 (Stable Version):
 * Improvements of summary functions
